# atlier

./: .gitignore  .gitmodules  Cargo.toml  readme.md
archive/include/atlier/: errors.h  layer.h  node.h  types.h
archive/include/atlier/sys/: root.h  term.h  uri.h
archive/src/: main.c  root.c
derive/src/: attribute.rs  lib.rs
derive/src/attribute/: output.rs  render.rs  update.rs
example/: Cargo.toml
example-imgui-rs/: Cargo.toml
example-imgui-rs/src/: main.rs
example-imnodes-rs/: Cargo.toml
example-imnodes-rs/lib/: Cargo.toml
example-imnodes-rs/lib/src/: lib.rs
example-imnodes-rs/src/: main.rs
example-specs-imnodes/: Cargo.toml
example-specs-imnodes/src/: main.rs
example/lib/: Cargo.toml  exanded.rs
example/lib/src/: lib.rs
example/lib/src/editor/: add.rs
example/src/: main.rs
example/src/graph/: editor.rs
examples/: simple.rs
examples/example-imgui-rs/: Cargo.toml
examples/example-imgui-rs/src/: main.rs
include/: atlier.h  design.md
include/atlier/: address.h  descriptor.h  graph.h  nid.h  node.h  resource.h  types.h
include/atlier/sys/: string.h  uri.h
rs/atlier/: .gitignore  .gitmodules
rs/atlier/derive/: Cargo.toml
rs/atlier/derive/src/transition/: output.rs
rs/atlier/example/lib/src/: lib.rs
src/: CMakeLists.txt  app.rs  combine.rs  desc.rs  extension.rs  lib.rs  main.c  modules.rs  prelude.rs  root.h  store.rs  system.rs  term.c  term.h
src/desc/: artifact.rs  content.rs
src/editor/: CMakeLists.txt  main.c
src/modules/: editor.rs  filesystem.rs  functions.rs  graphics.rs
src/modules/filesystem/: directory.rs
src/modules/functions/: sine.rs  time.rs
src/modules/graphics/: color.rs
src/system/: attribute.rs  filesystem.rs  font.rs  gui.rs  node.rs  runtime.rs  state.rs  test.rs  user_app.rs  value.rs  window.rs
src/system/attribute/: routine.rs  value.rs
src/system/filesystem/: node.rs
src/system/node/: expression.rs  module.rs  resource.rs  visitor.rs
