[package]
name = "atlier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imnodes = { path = "./imnodes-rs" }
derive = { path = "./derive" }
specs = { version = "0.17.0", features = ["default", "derive"] }
wgpu = "0.11.0"
winit = "0.25.0"
futures = "0.3.17"
imgui = { version = "0.8.0", features = [ "tables-api" ] }
imgui-winit-support = "0.8.0"
imgui-wgpu = "0.18.0"
