[package]
name = "atlier"
version = "0.2.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.17.0", features = ["default", "derive", "serde"] }
futures = "0.3.17"
imgui = { version = "0.8.0", features = [ "tables-api" ] }
imgui-wgpu = "0.20.0"
serde = "1.0.137"
base64 = "0.13.0"
winit = "0.26"
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }
raw-window-handle = "0.4"
wgpu = "0.13"