[package]
name = "atlier"
version = "1.0.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { git = "https://github.com/amethyst/specs", features = ["default", "derive", "serde"] }
futures = "0.3.17"
imgui = { version = "0.9.0", features = [ "tables-api" ] }
imgui-wgpu = "0.21.0"
serde = "1.0.137"
base64 = "0.13.0"
winit = "0.27.5"
imgui-winit-support = "0.9.0"
raw-window-handle = "0.5"
wgpu = "0.14.2"