[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "./lib" }
specs = { version = "0.17.0", features = ["default", "derive"] }
imnodes = { path = "../imnodes-rs" }
