[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlier = {path="../../"}
imnodes = { path="../../imnodes-rs/" }
imgui = "0.8.0"
specs = { version = "0.17.0", features = ["default", "derive"] }
